# trading-bot

./: .bandit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  bandit.yaml  docker-compose.monitoring.yaml  lefthook.yml  pyproject.toml  pytest.ini
.github/: issue-branch.yml
.github/ISSUE_TEMPLATE/: BUG.md  FEATURE.md  HOTFIX.md  REFACTOR.md  SETUP.md  bug_report.md  common_feature.md  config.yml  fix.md  model_schema.md  refactor.md  strategy_feature.md  upbit_feature.md
.github/workflows/: claude-pr-review.yml  claude.yml  create-branch-on-issue.yml  label-sync.yml
config/alloy/: config.alloy
config/grafana/provisioning/datasources/: loki.yml
config/loki/: config.yml
docs/configs/: BANDIT.md  PYTEST.md  RUFF.md
docs/guides/: CODE_REVIEW.md  CODING_CONVENTION.md  CODING_GUIDE.md  COMMIT.md  COMMIT_MESSAGE.md  GIT_WORKFLOW.md  MONITORING.md
src/connection/: __init__.py  postgres.py  redis.py
src/models/: candle.py
src/monitoring/: __init__.py  logger.py
tests/: conftest.py  test_conftest_hooks.py
tests/connection/: test_postgres.py  test_redis.py
tests/models/: test_candle.py
tests/monitoring/: test_logger.py
