[project]
name = "python-starter-kit"
version = "0.1.0"
description = "Python Starter Kit with Claude Code Action"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # --- PLG 로깅/모니터링 ---
    "structlog>=25.5.0",  # 구조화된 로깅 라이브러리
]

[dependency-groups]
dev = [
    # --- 코드 품질 ---
    "bandit>=1.9.4",     # 보안 취약점 정적 분석
    "lefthook>=2.0.15",  # Git 훅 관리자
    "ruff>=0.15.4",      # 린터 & 포매터

    # --- 테스트 실행기 ---
    "pytest>=9.0.2",    # 테스트 프레임워크 코어

    # --- pytest 플러그인 ---
    "pytest-asyncio>=1.3.0",  # async/await 테스트 지원
    "pytest-cov>=7.0.0",      # 테스트 커버리지 측정
    "pytest-mock>=3.15.1",    # mocker fixture를 통한 목 객체 지원
    "pytest-xdist>=3.8.0",    # 병렬 테스트 실행

    # --- 테스트 유틸리티 ---
    "faker>=40.5.1",      # 가짜 데이터 생성 (이름, 이메일 등)
    "freezegun>=1.5.5",   # 날짜/시간 고정 및 목킹
    "httpx>=0.28.1",      # API 테스트용 비동기 HTTP 클라이언트
]
